logs/Slang/generated/yosys/simple_param_attr.sv.log
name: simple_param_attr
description: Tests imported from yosys
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/param_attr.v
should_fail: 0
tags: yosys
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/param_attr.v:6:14: error: identifier 'WIDTH' used before its declaration
input  wire [WIDTH-1:0] I;
             ^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/param_attr.v:4:11: note: declared here
parameter WIDTH = 1;
          ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/param_attr.v:7:14: error: identifier 'WIDTH' used before its declaration
output wire [WIDTH-1:0] O;
             ^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/param_attr.v:4:11: note: declared here
parameter WIDTH = 1;
          ^
